labs/05-network-policies/yaml/npm-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    addonmanager.kubernetes.io/mode: EnsureExists
    app: azure-npm
  name: azure-npm
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: azure-npm
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        k8s-app: azure-npm
    spec:
      containers:
      - env:
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: spec.nodeName
        image: containernetworking/azure-npm:v1.0.18
        name: azure-npm
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /run/xtables.lock
          name: xtables-lock
        - mountPath: /var/log
          name: log
      dnsPolicy: ClusterFirst
      hostNetwork: true
      nodeSelector:
        beta.kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccount: azure-npm
      serviceAccountName: azure-npm
      priorityClassName: system-node-critical
      nodeSelector:
        beta.kubernetes.io/os: linux
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      volumes:
      - hostPath:
          path: /var/log
          type: Directory
        name: log
      - hostPath:
          path: /run/xtables.lock
          type: File
        name: xtables-lock
