labs/05-network-policies/yaml/policy-all-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-all-deny
  namespace: default
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
