labs/05-network-policies/yaml/policy-bookinfo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-nginx-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  ingress:
  - {}

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-productpage-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: productpage
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from: 
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx 

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-details-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from:
    - podSelector:
        matchLabels:
          app: productpage 

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-reviews-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from:
    - podSelector:
        matchLabels:
          app: productpage 

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ratings-allow
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ratings
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 9080
    from:
    - podSelector:
        matchLabels:
          app: reviews
